--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
             <div class="files">
                 <label class="option vertical-flex">
                     <p>Select your files</p>
-                    <input type="file" accept="*/*"/>
+                    <input type="file" accept="*/*" name="files"/>
                 </label>
 
             </div>
@@ -46,7 +46,7 @@
                         <input type="checkbox" name="nashville">
                     </label>
 
-                    <button id="goButton">Render</button>
+                    <button id="goButton" onclick="render()">Render</button>
                 </form>
             </div>
 
