--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
             <div class="files">
                 <label class="option vertical-flex">
                     <p>Select your files</p>
-                    <input type="file" accept="*/*" name="files"/>
+                    <input type="text" name="files" placeholder="~/Documents/Songs/overcome.cho"/>
                 </label>
 
             </div>
